# homies_yt_downloader

./: .gitignore  app.py  main.py  pyproject.toml
threads/: download_thread.py
ui/: dashboard_page.py  main_window.py  media_app.py  splash_screen.py  splash_style.qss  styles.py  ui_helpers.py  youtube_page.py
utils/: helpers.py
